--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "inversify": "^6.0.1",
     "inversify-binding-decorators": "^4.0.0",
     "mongoose": "^6.2.1",
+    "runtypes": "^6.6.0",
     "ts-loader": "^9.2.6"
   },
   "eslintConfig": {
