--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=development webpack",
     "build": "webpack",
-    "test": "jest unit --setupFiles dotenv/config",
+    "test": "NODE_TEST=unit jest unit --setupFiles dotenv/config --detectOpenHandles",
     "test:integration": "jest integration --passWithNoTests --setupFiles dotenv/config",
     "quickTest": "jest unit --bail --silent --setupFiles dotenv/config",
     "serve": "yarn build && node dist/app.js"
@@ -59,8 +59,10 @@
     "helmet": "^5.0.2",
     "inversify": "^6.0.1",
     "inversify-binding-decorators": "^4.0.0",
+    "jest": "^29.5.0",
     "mongoose": "^6.2.1",
     "runtypes": "^6.6.0",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.2.6"
   },
   "eslintConfig": {
@@ -97,5 +99,24 @@
         }
       ]
     }
+  },
+  "jest": {
+    "verbose": true,
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "testTimeout": 30000,
+    "testMatch": [
+      "**/__tests__/**/*.+(ts|tsx|js)",
+      "**/(?!!+)(*.)+(spec|test).+(ts|tsx|js)"
+    ],
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    },
+    "modulePaths": [
+      "<rootDir>/src"
+    ]
   }
 }
