--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "inversify": "^6.0.1",
     "inversify-binding-decorators": "^4.0.0",
     "jest": "^29.5.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.2.1",
+    "nanoid": "^4.0.2",
     "runtypes": "^6.6.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.2.6"
